Single product and category single product page footer not showing at bottom fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@
   
 .swiper {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .swiper-slide {
@@ -48,6 +48,7 @@
  display: flex;
  justify-content: center;
   align-items: center;
+  padding-bottom: 20px !important;
 }
 .iiz div{
   height: 500px !important;
